--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@storybook/addon-a11y": "^8.5.1",
+    "@storybook/addon-coverage": "^1.0.5",
+    "@storybook/addon-docs": "^8.5.1",
     "@storybook/addon-essentials": "^8.5.1",
     "@storybook/addon-interactions": "^8.5.1",
+    "@storybook/addon-measure": "^8.5.1",
+    "@storybook/addon-viewport": "^8.5.1",
     "@storybook/builder-vite": "^8.5.1",
     "@storybook/react": "^8.5.1",
     "@storybook/react-vite": "^8.5.1",
     "@storybook/test": "^8.5.1",
+    "@storybook/test-runner": "^0.21.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/bun": "latest",
     "rollup-plugin-visualizer": "^5.14.0",
@@ -27,6 +33,7 @@
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.3",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7"
@@ -38,6 +45,8 @@
     "analyze:ci": "vite build --mode analyze && node scripts/check-bundle-size.js",
     "precommit": "bun run analyze:ci",
     "storybook": "storybook dev -p 6006 --no-version-updates",
-    "build-storybook": "storybook build --no-version-updates"
+    "build-storybook": "storybook build --no-version-updates",
+    "test-storybook": "test-storybook",
+    "test-storybook:coverage": "test-storybook --coverage"
   }
 }
