--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "@storybook/react-vite": "^8.5.1",
     "@storybook/test": "^8.5.1",
     "@storybook/test-runner": "^0.21.0",
+    "@swc/jest": "^0.2.37",
     "@tailwindcss/vite": "^4.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bun": "latest",
+    "@types/jest": "^29.5.14",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "jest": "^29.7.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^4.0.0",
     "vite": "^6.0.11",
@@ -27,9 +33,14 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
