--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "@themeaningof8/ui",
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
@@ -19,11 +19,16 @@
     "@tailwindcss/vite": "^4.0.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.0.4",
+    "happy-dom": "^16.7.3",
     "jest": "^29.7.0",
+    "jsdom": "^26.0.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^4.0.0",
     "vite": "^6.0.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -34,12 +39,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/react": "14.2.1",
     "@types/bun": "latest",
     "@types/jest": "^29.5.14",
-    "@types/testing-library__jest-dom": "^6.0.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
@@ -55,6 +60,9 @@
     "analyze": "vite build --mode analyze",
     "analyze:ci": "vite build --mode analyze && node scripts/check-bundle-size.js",
     "precommit": "bun run analyze:ci",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --environment jsdom",
+    "test:watch": "vitest --watch",
     "storybook": "storybook dev -p 6006 --no-version-updates",
     "build-storybook": "storybook build --no-version-updates",
     "test-storybook": "test-storybook",
