--- a/package.json
+++ b/package.json
@@ -41,13 +41,16 @@
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.1.5",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.1",
