--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "sonner": "^1.7.2",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.0.1",
     "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
@@ -62,7 +62,7 @@
     "dev": "vite",
     "build": "vite build",
     "analyze": "vite build --mode analyze",
-    "analyze:ci": "vite build --mode analyze && node scripts/check-bundle-size.js",
+    "analyze:ci": "vite build --mode analyze && bun run scripts/check-bundle-size/index.ts",
     "precommit": "bun run analyze:ci",
     "test": "vitest",
     "test:coverage": "vitest run --coverage --environment jsdom",
