--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/bun": "latest",
     "@types/jest": "^29.5.14",
+    "@types/jest-axe": "^3.5.9",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.4",
+    "apca-w3": "^0.1.9",
+    "axe-core": "^4.10.2",
     "jest": "^29.7.0",
+    "jest-axe": "^9.0.0",
     "jsdom": "^26.0.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^4.0.0",
