--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@storybook/addon-measure": "^8.5.1",
     "@storybook/addon-viewport": "^8.5.1",
     "@storybook/builder-vite": "^8.5.1",
+    "@storybook/jest": "^0.2.3",
     "@storybook/react": "^8.5.1",
     "@storybook/react-vite": "^8.5.1",
     "@storybook/test": "^8.5.1",
     "@storybook/test-runner": "^0.21.0",
+    "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/vite": "^4.0.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "16.2.0",
+    "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/apca-w3": "^0.1.3",
     "@types/bun": "latest",
     "@types/jest": "^29.5.14",
     "@types/jest-axe": "^3.5.9",
@@ -43,7 +46,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-hover-card": "^1.1.5",
@@ -53,19 +60,26 @@
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^3.0.1",
     "tailwind-variants": "^0.3.1",
@@ -78,12 +92,9 @@
     "analyze": "vite build --mode analyze",
     "analyze:ci": "vite build --mode analyze && bun run scripts/check-bundle-size/index.ts",
     "precommit": "bun run analyze:ci",
-    "test": "vitest",
-    "test:coverage": "vitest run --coverage --environment jsdom",
-    "test:watch": "vitest --watch",
     "storybook": "storybook dev -p 6006 --no-version-updates",
     "build-storybook": "storybook build --no-version-updates",
-    "test-storybook": "test-storybook",
+    "test-storybook": "bun run storybook && test-storybook",
     "test-storybook:coverage": "test-storybook --coverage"
   }
 }
