Update module paths, adjust base color, and refine component styles for improved consistency and accessibility

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@themeaningof8/ui",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
     "@storybook/addon-a11y": "^8.5.1",
